Added bachelor thesis to thesis page for 2019

--- a/content/kurser/exjobb/arbeten/a2019.md
+++ b/content/kurser/exjobb/arbeten/a2019.md
@@ -7,7 +7,13 @@ revision:
 Examensjobb 2019
 ====================================
 
-Här följer ett urval på examensarbeten som är planerade att pågå under 2019.
+Här följer ett urval på examensarbeten (högskole/kandidat/magister-examen) som lämnats in under 2019.
+
+Examensarbeten för [2018](kurser/exjobb/arbeten/a2018).
+
+<!--more-->
+
+[Sök själv i DiVA efter äldre examensjobb](bth.diva-portal.org/smash/search.jsf).
 
 
 <!--more-->
@@ -19,17 +25,16 @@ Högskoleexamen {#hogskoleexamen}
 
 
 
-**Is replacing Excel spreadsheets with costume-built web-based system worth it?**
+**Dynamic vs Static user-interface: Which one is easier to learn? And will it make you more efficient?**
 
-Företag ICS Sweden. Byta ut befintliga processer med excel till webbaserade, är det värt det?
+Excel offers great flexibility and allows non-programmers to create complex functionality – but at the same time, it can become very nested with cells pointing to other cells, especially if there have been many changes over a more extended period. This has happened to ICS – a small company who has its focus on calibration, out of an array of different things relating to material testing. The system they have for field calibrations today have been overly complicated and hard to maintain and consists of multiple Excel spreadsheets. The conclusion has been that a new system needs to be developed – but question how, remains. By creating a prototype using modern web-technologies, this study has evaluated if a web application can meet the specific functional requirements ICS have and if it is a suitable solution for a new system. The prototype was put under manual user test, and the results find that the prototype meets all the requirements, meaning that a webapplication could work as a replacement. During the user tests, this study has also evaluated the differences in learnability and efficiency of users, between the static user interface of the current Excel-based system and the dynamic user interface of the web-based prototype. The users have performed a calibration with both systems, and parameters such as time to completion or number of errors made have been recorded. By comparing the test results from both systems, this study has concluded that a dynamic user interface is more likely to improve learnability for novice users, but have a low impact on efficiency for expert users.
 
-Christofer Augustsson
-
-Handledare: Torbjörn Fridensköld
+Christofer Augustsson ([URN](http://urn.kb.se/resolve?urn=urn:nbn:se:bth-17995))
 
 
 
-**Virtuellt taktsystem @ Dynapac**
+
+<!-- **Virtuellt taktsystem @ Dynapac**
 
 Företag Dynapac.
 
@@ -37,35 +42,35 @@ Fokus IoT och IIoT (Industrial Internet of Things).
 
 Jonatan Lindblom, Christofer Wikman
 
-Handledare: Conny Johansson
+Handledare: Conny Johansson -->
 
 
 
 **Webbapplication as a common tool -- Case study at Dynapac**
 
-Kund Dynapac.
-
-Can web applications be used as  a  common  tool  and  be  created  and  maintained  by  none  software  developers?
+In this thesis a template web application with an associated guideline was developed. This  template  application  and  guideline  is  intended  to  be  used by  none  software developers that want to implement web applications as a daily tool/platform in their daily business. The thesis question to be answered was how this template application and guideline should look like.
 
 Marcus Holmersson ([URN](http://urn.kb.se/resolve?urn=urn:nbn:se:bth-17882))
 
-Handledare: Conny Johansson
+<!-- Handledare: Conny Johansson -->
 
 
 
-**Multifunctional mobile web applications and optimizing content for smartphones**
+**Adapting the web: Analysis of guidelines for responsive design**
 
-Kund: My client is developing a web site that provides content from four popular game streamingservices on one common site.
+Smartphone usage is higher than ever and the number is steadily increasing, but not all websites on the Internet are adapted for use on smartphones. This study set out to find common and proven guidelines from the current scientific literature and create a guide on how to best adapt a desktop website to be optimized for use on smartphones. Areas of research were usability, readability and energy saving. A literature review of the body of data on the subject was reviewed and the result was put in a list of guidelines. The guidelines were used to compare the desktop version versus the smartphone version on 5 frequently visited websites.
 
-I intend to investigate the best way to adapt content that is originally meant for adesktop-sized screen or content in general to be as readable, user-friendly andwell-performing as possible.
+<!-- The result was summarized with a score for each website and their respective solution for displaying components on small screens was noted. A prototype website was constructed in two versions: one responsive and one unresponsive. The prototype website’s different versions were then tested by a group of testers. The result of the tests concluded that the guidelines raised user satisfaction and readability. Sufficient energy saving metrics could not be extracted in the way design and usability was tested and had to be excluded from the testing.
+
+The list of guidelines showed that there are solutions for solving readability, usability issues  and energy-saving issues on smartphones. The testing concluded that there was an increase in text readability and usability of the website when the guidelines were implemented. Further testing of energy saving must be conducted to test the validity of the remaining untested  guidelines. -->
 
 Eric Johansson ([URN](http://urn.kb.se/resolve?urn=urn:nbn:se:bth-17996))
 
-Handledare: Kenneth Lewenhagen
+<!-- Handledare: Kenneth Lewenhagen -->
 
 
 
-**Virtual Reality in the Treatment of Anxiety and Phobias**
+<!-- **Virtual Reality in the Treatment of Anxiety and Phobias**
 
 I would like to study the current status and the potential of virtual reality as a tool for psychologists in the treatment of patients suffering from anxiety disorders, phobias being one example of them.
 
@@ -73,11 +78,11 @@ Kund: a clinical psychologist who is planning to include virtual reality technol
 
 Daniel Ibanez Alegria
 
-Handledare: Kenneth Lewenhagen
+Handledare: Kenneth Lewenhagen -->
 
 
 
-**Swift vs React Native**
+<!-- **Swift vs React Native**
 
 Ej kund.
 
@@ -85,11 +90,11 @@ Min egen idé är att jämföra processen för att skapa en native app i Swift o
 
 Oliver Johnsson
 
-Handledare: Andreas Arnesson
+Handledare: Andreas Arnesson -->
 
 
 
-**Interface and report page for multiple billing systems**
+<!-- **Interface and report page for multiple billing systems**
 
 Kund Miss hosting AB.
 
@@ -99,11 +104,11 @@ The main challenge would be to investigate about the closed source system WHMCS 
 
 Edward Nilsson
 
-Handledare: Mikael Svahnberg
+Handledare: Mikael Svahnberg -->
 
 
 
-**Python vs Javascript: Real time web applications**
+<!-- **Python vs Javascript: Real time web applications**
 
 Ingen kund.
 
@@ -111,11 +116,11 @@ Studera området realtidswebb och jämföra hur python vs javascript implementer
 
 Vilhelm Martinsson
 
-Handledare: Mikael Svahnberg
+Handledare: Mikael Svahnberg -->
 
 
 
-**Wordpress – en hållbar lösning för webbapplikationer ur säkerhetsperspektiv?**
+<!-- **Wordpress – en hållbar lösning för webbapplikationer ur säkerhetsperspektiv?**
 
 Kund Spenderups Bryggerier.
 
@@ -123,11 +128,11 @@ Koppling till en webbsida är att de haft problem med sabotage som har möjliggj
 
 David Johansson
 
-Handledare: Mikael Roos
+Handledare: Mikael Roos -->
 
 
 
-**Web scraping vs API**
+<!-- **Web scraping vs API**
 
 Kund Region Blekinge.
 
@@ -137,24 +142,21 @@ Kund Region Blekinge.
 
 Philip Klingzell
 
-Handledare: Mikael Roos
+Handledare: Mikael Roos -->
 
 
 
-**UI och UX, två viktiga aspekter för användaren**
+**User Experience för navigationsmeny, en bättre upplevelse**
 
-Företag Bouvet, Örebro. Fokus på UI/UX moduler inom webb- och REST-appar.
-
-* Förstå skillnaden mellan UI/UX
-* Hur uppnår man en väldesignad UI/UX?
+Studien har sin grund i ett projekt för att ska en navigationsmeny som modul för ett företag i Örebro. Syftet är att utveckla en prototyp för navigationsmeny som skall kunna införliva sig i en riktig miljö till kunder och enkelt ska kunna nås via en import i SiteVision. Därefter samla och utvärdera data för att presentera det. Det huvudsakliga målet var att utvärdera om det finns rekommendationer och riktlinjer för skapande av en god navigation. Men även att utvärdera implementationen av modul och sedan utvärdera respons från testgrupp som fick testa modulen i en miljö.  Baserat på litteraturstudien och fallstudien så blev resultatet för implementationen som förväntat. Det gäller att förstå sig målgruppen man skapar en webbplats för och genom det handplocka riktlinjer och rekommendationer för att nå bästa resultat vid skapande av navigationsmeny. Av resultatet från utvärdering av navigationsmenyer har framkommit att det är viktigt att kunna förstå sig på de riktlinjer och rekommendationer som finns för att sedan kunna handplocka dom som är bäst för sig egen navigationsmeny. Det framkom också att det inte alltid behöver vara mycket fokus på design och moderna effekter för att uppnå en bättre navigation.
 
 Ara Nour Bakhsh ([URN](http://urn.kb.se/resolve?urn=urn:nbn:se:bth-18016))
 
-Handledare: Mikael Roos
+<!-- Handledare: Mikael Roos -->
 
 
 
-**REST vs GraphQL – Är GraphQL redo att ersätta REST?**
+<!-- **REST vs GraphQL – Är GraphQL redo att ersätta REST?**
 
 Ej kund.
 
@@ -162,7 +164,7 @@ Viktor Bengtsson
 
 Finns det några tydliga skillnader mellan REST och GraphQL och vilka för- och nackdelar har de två teknikerna? Målet blir att undersöka hur datahantering sker i båda teknikerna. Sen vill jag även undersöka hur själva koden skiljer sig åt dels genom att titta på hur enkel koden är att förstå, mängden kod som krävs för att bygga ett användarsystem och hur detta kan påverka utvecklingstiden.
 
-Handledare: Emil Folino
+Handledare: Emil Folino -->
 
 
 
@@ -170,14 +172,60 @@ Handledare: Emil Folino
 
 Denna uppsats handlar om hur programmering som verktyg i matematisk problemlösning har implementerats sedan det infördes som obligatoriskt i flera av gymnasiets mattekurser hösten 2018. Syftet är att reda ut vilka programmeringsspråk och programbibliotek som används ute i klassrummen och hur det upplevs av elever och lärare med avseende på svårighetsgrad, nytta för matematiken och om det bidragit till ett ökat intresse för programmering i allmänhet hos eleverna. Även eventuella könsrelaterade skillnader i dessa frågor har undersökts, då en av de politiska intentionerna med införandet varit att en förhoppning att främja flickors it-intresse.
 
-Arbetet tar sitt teoretiska avstamp i en genomgång av den politiska bakgrunden till införandet, tidigare studier i ämnet och en kort historik om programmeringens roll i läroplanerna.
+<!-- Arbetet tar sitt teoretiska avstamp i en genomgång av den politiska bakgrunden till införandet, tidigare studier i ämnet och en kort historik om programmeringens roll i läroplanerna. -->
 
-Med hjälp av digitala enkäter har fallstudier företagits i två klasser från olika gymnasieskolor i Skåne, där elever och lärare fått ta ställning till antal påstående genom att gradera på en skala hur väl påståendena stämmer samt komplettera med eventuell textkommentar. Enkäterna var anonyma men utformade på ett sådant sätt att lärare och elever kunnat kopplas samman klassvis.
+<!-- Med hjälp av digitala enkäter har fallstudier företagits i två klasser från olika gymnasieskolor i Skåne, där elever och lärare fått ta ställning till antal påstående genom att gradera på en skala hur väl påståendena stämmer samt komplettera med eventuell textkommentar. Enkäterna var anonyma men utformade på ett sådant sätt att lärare och elever kunnat kopplas samman klassvis.
 
 Av resultatet har framkommit att många elever visserligen uppfattar programmeringen som svår och inte anser att den underlättar förståelsen för matematik. Men det framkom också att skillnaden var stor i dessa frågor och svaren tycks hänga samman med lärarens tidigare erfarenhet av programmering och i vilken omfattning programmeringen lärts ut. Intresset för programmering i allmänhet tycks inte ökat nämnvärt p.g.a. att det ingår i matematiken, men det låter sig heller inte entydigt sägas om någotdera könet var mer positivt eller negativt inställd till programmeringen. En något större andel tjejer än killar valde det allra mest negativa alternativet i enkätfrågorna, men klumpar man samman de mest negativa respektive de mest positiva alternativen på varsin halva om mitten, var tjejerna å andra sidan något överrepresenterade bland de positiva alternativen.
 
-Python verkar vara ett lämpligt programmeringsspråk att använda. Det är viktigt att tillse att lärare har tillräcklig kunskap i programmering och att omfattningen i utlärandet av programmering inte blir alltför ytlig, för att eleverna skall tillägna sig nyttan av det. Obligatorisk programmering i matematik kan potentiellt bidra till att fler för upp ögonen för ämnet och på sikt minska den sneda könsfördelningen bland yrkesprogrammerare.
+Python verkar vara ett lämpligt programmeringsspråk att använda. Det är viktigt att tillse att lärare har tillräcklig kunskap i programmering och att omfattningen i utlärandet av programmering inte blir alltför ytlig, för att eleverna skall tillägna sig nyttan av det. Obligatorisk programmering i matematik kan potentiellt bidra till att fler för upp ögonen för ämnet och på sikt minska den sneda könsfördelningen bland yrkesprogrammerare. -->
 
 Klas Wärnå ([URN](http://urn.kb.se/resolve?urn=urn:nbn:se:bth-17900))
 
-Handledare: Andreas Arnesson
+<!-- Handledare: Andreas Arnesson -->
+
+
+
+Kandidatarbeten {#kandidat}
+------------------------------------
+
+
+**Google AMP and what it can do for mobile applications in terms of rendering speed and user-experience**
+
+On today’s web, a web page needs to load fast and have a great user experience in order to be successful. The faster the better. A server side rendered web page can have a prominent initial load speed while a client side rendered web page will have a great interactive user experience. When combining the two,some users with a bad internet connection or a slow device could receive a poor user experience. A new technology called Amplified Mobile Pages (AMP) was created by Google to help combat this issue.The authors of this report gives an answer to if Google AMP could maintain the user experience while still contributing with a fast initial load speed for applications. To do this, we conducted an experiment through creating a Google AMP application and compared it to another application using a different rendering engine called Pug. We have also measured the metrics: page load time, speed index and application size between the two applications. To fully understand the AMP format, the authors conducted a literature study, to further strengthen their findings.Google AMP is a great technology but it can still grow to become better. The format could increase the speed of a website, however the same result could be achieved without AMP if focus was set on writing a fast application. From the experiment, the authors concluded that Google AMP takes a great time to learn because of its own version of JavaScript through modules. The format also has a different structure than standard HTML. From the tests, a smaller application does not favor the implementation of AMP. We did however derive from the experiment and the literature study that bigger applications could benefit from the perks of AMP and could therefor be a potential choice for old and new applications.
+
+Niklas Andersson och Oscar Bäck ([URN](http://urn.kb.se/resolve?urn=urn:nbn:se:bth-17952))
+
+
+
+**Symfony vs Express: A Server-Side Framework Comparison**
+
+Considering the rising popularity of Node.js and the fact that a very large percentage of websites today are based on PHP, there is a need to understand the similarities and differences between these languages.  Comparing their most popular server-side  frameworks  is  valuable  to  developers  in  seeing  the  advantages  of  using one over the other - for both user and developer.
+
+Magnus Greiff och André Johansson ([URN](http://urn.kb.se/resolve?urn=urn:nbn:se:bth-17945))
+
+
+
+**Load time optimization of JavaScript web applications**
+
+Websites are getting larger in size each year, the median size increased from 1479.6 kilobytes to 1699.0 kilobytes on the desktop and 1334.3 kilobytes to 1524.1 kilobytes on the mobile. There are several methods that can be used to decrease the size. In my experiment I use the methods tree shaking, code splitting, gzip, bundling, and minification. Since tree shaking and code splitting are two relatively new techniques, there is not much scientific measured values available. From the results, we can give the conclusion that using all of the mentioned methods will give the best result in loading time. All of the methods will affect the loading time, and only using gzip will affect it with a 60% decrease.
+
+Simon Huang ([URN](http://urn.kb.se/resolve?urn=urn:nbn:se:bth-17931))
+
+**Creative Coding on the Web in p5.js: A Library Where JavaScript Meets Processing**
+
+Creative coding is the practice of writing code primarily for an expressive purpose rather than a functional one. It is mostly used in creative arts contexts. One of the most popular tools in creative coding is Processing. Processing is a desktop application and in recent years a web-based alternative named p5.js has been developed.
+
+The results from the coding experiments show that compared to plain JavaScript p5.js is easier to get started with, it is more intuitive, and code created in p5.js is easier to read. On the other hand, p5.js performs worse, especially when continuously drawing large amounts of elements to the screen. This is further supported by the survey and the interviews, which show that p5.js is liked for its usability, but that its performance issues and lack of advanced features mean that it is usually not considered for professional projects. The primary use case for p5.js is creating quick, visual prototypes. At the same time, the interviews show that p5.js has been used in a variety of contexts, both creative and practical.
+
+p5.js is a good library for getting started with coding creatively in the browser and is an excellent choice for experimenting and creating prototypes quickly. Should project requirements be much more advanced than that, there might be other options that will work better.
+
+Emil Sandberg ([URN](http://urn.kb.se/resolve?urn=urn:nbn:se:bth-17941))
+
+
+
+**Comparing Scaling Benefits of Monolithic and Microservice Architectures Implemented in Java and Go**
+
+This thesis looks at scalability and related scaling performance in two software architectures, monolothic and microservice. Two programming languages, Java and Go, are used conjunction with the two architectures, creating four combinations implemented of the same application. The application implemented is a simple API with a clearly defined bottleneck throttling the application's performance when not scaled.
+
+Simon Wahlström ([URN](http://urn.kb.se/resolve?urn=urn:nbn:se:bth-18100))
