--- a/content/guide/kom-igang-med-bash/405_if.md
+++ b/content/guide/kom-igang-med-bash/405_if.md
@@ -6,7 +6,7 @@ revision:
 if statement
 =======================
 
-När vi använder if-satser är vi redan bekanta med att det görs en kontroll där en operator används för att avgöra hur vi går vidare med exekveringen.
+När vi använder if-satser är vi redan bekanta med att det görs en kontroll där en operator används för att avgöra hur vi går vidare med exekveringen. Nedan visas if-satserna i sin fulla form. Ofta behöver man inte skriva ut hela utan man gör testet och använder sedan en operator för villkoret, mer likt en ternary if sats.
 
 
 
@@ -27,6 +27,10 @@ if [[ $val1 -gt 5 ]]
 then
     echo "$val1 is greater than 5"
 fi
+
+# Another (cleaner) way to write that if statement
+
+[[ $val1 -gt 5 ]] && echo "$val1 is greater than 5"
 
 # If with strings
 
