more on bash guide

--- a/content/guide/kom-igang-med-bash/405_if.md
+++ b/content/guide/kom-igang-med-bash/405_if.md
@@ -28,10 +28,6 @@ then
     echo "$val1 is greater than 5"
 fi
 
-# Another (cleaner) way to write that if statement
-
-[[ $val1 -gt 5 ]] && echo "$val1 is greater than 5"
-
 # If with strings
 
 string1="musik"
@@ -47,6 +43,25 @@ then
     echo "$string1 is not the same word as $string2"
 fi
 ```
+
+
+
+Vi kan skriva om if-satser i Bash på följande sätt:
+
+```bash
+#!/usr/bin/env bash
+
+# Another (cleaner) way to write an if statement
+
+val1=10
+
+[[ $val1 -gt 5 ]] && echo "$val1 is greater than 5"
+
+```
+
+Istället för `&&` (och) kan vi även använda `||` (eller) för att styra vad som händer.
+
+
 
 ### else-if/else {#elseif}
 
