--- a/content/guide/kom-igang-med-bash/720_ifs.md
+++ b/content/guide/kom-igang-med-bash/720_ifs.md
@@ -93,5 +93,28 @@ IFS=$IFS_BACKUP
 # Continue with the default values
 ```
 
+
+<!--
+### Ändra $IFS för kommandot read {#readcommand}
+
+När vi ändrar på variabeln $IFS så ändras den även utanför loopen eller var vi nu använder den. För att bara ändra den där vi behöver kan vi vända på steken och definiera om loopen såhär:
+
+```bash
+
+sentence="Bash:is:awesome"
+
+
+
+# Change the IFS
+IFS=":"
+
+for word in $sentence
+do
+    echo "$word"
+done
+``` -->
+
+
+
 Tips 1: Se vad IFS innehåller: `echo "$IFS" | cat -ETv`  
 Tips 2: läs gärna mer om [IFS](https://bash.cyberciti.biz/guide/$IFS)
