jobba igenom första delen av v2 guiden

--- a/content/guide/v2/kom-igang-med-programmering-i-php/0202_php.md
+++ b/content/guide/v2/kom-igang-med-programmering-i-php/0202_php.md
@@ -1,13 +1,23 @@
 ---
 author: mos
 revision:
-    "2018-06-19": "(B, mos) Genomgången och uppdaterad."
-    "2018-03-13": "(A, mos) Första versionen, uppdelad av större dokument."
+    "2020-08-12": "(A, mos) Ny i v2."
 ...
-PHP och HTML
+PHP
 =======================
 
-Låt oss titta på hur PHP och HTML förhåller sig till varandra. Vi gör ett exempel och bygger en vanlig html-sida som vi sedan gör om till en dynamisk php-sida. Det ger oss en känsla av skillnaden mellan dem.
+Vi börjar med ett första minsta möjliga PHP-program som vi kan skriva ut i webbläsaren och se resultatet.
+
+
+
+
+
+---
+
+
+
+
+
 
 
 
@@ -20,7 +30,7 @@ Ta koden nedan och lägg i en fil `hello.html`.
 
 ```html
 <!doctype html>
-<html lang="en"> 
+<html lang="en">
 <head>
 <meta charset="utf-8"/>
 <title>A web page | Hello</title>
