fixed broken link

--- a/content/kurser/exjobb/arbeten/a2018.md
+++ b/content/kurser/exjobb/arbeten/a2018.md
@@ -14,7 +14,7 @@ Urvalet är gjort för att vara intressant för de som skall skriva sina arbeten
 
 <!--more-->
 
-[Sök själv i DiVA efter äldre examensjobb](bth.diva-portal.org/smash/search.jsf).
+[Sök själv i DiVA efter äldre examensjobb](https://bth.diva-portal.org/smash/search.jsf).
 
 
 
@@ -23,7 +23,7 @@ Högskolearbeten {#hogskoleexamen}
 
 **Self-organizing Distributed Team: Working agile and effective**
 
-In order for a software development team to be successful, cost effective and perform effectively the team needs to coordinate and communicate sufficiently in order to compensate for the obstacles that a distributed team face. 
+In order for a software development team to be successful, cost effective and perform effectively the team needs to coordinate and communicate sufficiently in order to compensate for the obstacles that a distributed team face.
 
 Peder Tornberg ([URN](http://bth.diva-portal.org/smash/record.jsf?pid=diva2%3A1217936&dswid=3012))
 
@@ -48,7 +48,7 @@ Niclas Söderkvist (Andreas Arnesson)
 
 **Hand-on DevOps A pratical test of the strenghts and weaknesses with devOps**
 
-Jag vill i detta projekt undersöka hur man praktiskt kan jobba med devOps och vilka konsekvenser det kan ha på ett projekt. 
+Jag vill i detta projekt undersöka hur man praktiskt kan jobba med devOps och vilka konsekvenser det kan ha på ett projekt.
 
 Christofer Jungberg (Torbjörn Fridensköld)
 -->
@@ -82,7 +82,7 @@ Magnus Andersson ([URN](http://bth.diva-portal.org/smash/record.jsf?pid=diva2%3A
 
 **Ramverk vs Vanilla JavaScript: Vilken teknik bör väljas för en modern webbapplikation?**
 
-Rapporten undersöker skillnader i ramverk och Vanilla JavaScript enligt krav för modernawebbapplikationer. Region Blekinge efterfrågade en prototyp för en sökfunktion för deras framtida webbsida. Genom att använda prototypen skulle unga kunna söka information om skolor och utbildningar i deras område för att lättare kunna göra ett bra val. Målsättningen är att ta reda på vad ett JavaScript-ramverk kan erbjuda, där fokus ligger på frågor om underhållbarhet. 
+Rapporten undersöker skillnader i ramverk och Vanilla JavaScript enligt krav för modernawebbapplikationer. Region Blekinge efterfrågade en prototyp för en sökfunktion för deras framtida webbsida. Genom att använda prototypen skulle unga kunna söka information om skolor och utbildningar i deras område för att lättare kunna göra ett bra val. Målsättningen är att ta reda på vad ett JavaScript-ramverk kan erbjuda, där fokus ligger på frågor om underhållbarhet.
 
 Marcus Gustafsson ([URN](http://urn.kb.se/resolve?urn=urn%3Anbn%3Ase%3Abth-16203))
 
@@ -100,7 +100,7 @@ Philip Klingzell (Andreas Arnesson)
 <!--
 **UI och UX, två viktiga aspekter för användaren**
 
-Jag ska även utreda hur man på bästa sätt kan presentera information av sökfunktionen samt hur den ska upplevas med hjälp av användargränssnitt och användarupplevelse. 
+Jag ska även utreda hur man på bästa sätt kan presentera information av sökfunktionen samt hur den ska upplevas med hjälp av användargränssnitt och användarupplevelse.
 
 Ara Nour Bakhsh (Kenneth Lewenhagen)
 -->
@@ -119,7 +119,7 @@ Anders Nygren (Mikael Roos)
 
 Inom en snar framtid kommer allt fler villaägare välja att skaffa elbil. Därigenom kommer det lokala elnätet att utsättas för stora utmaningar i form av oregelbunden belastning och potentiell överlast. Studien undersöker om man med mjukvara kan underlätta och få till stånd en effektstyrning av energi i lokalnätet, såväl som i den egna villan. Med hjälp av befintliga rapporter,webbfrågor och intervjuer kartläggs olika berörda aktörers inställning till, och beredskap för, attfördela last.
 
-Gunvor Nilsson ([URN](http://urn.kb.se/resolve?urn=urn%3Anbn%3Ase%3Abth-16155)) 
+Gunvor Nilsson ([URN](http://urn.kb.se/resolve?urn=urn%3Anbn%3Ase%3Abth-16155))
 
 Denna rapport [vann ett stipendie från Sparbankstiftelsen](https://dbwebb.se/forum/viewtopic.php?f=32&t=8060).
 
