uppdaterade och validerade del2 av oopython guide

--- a/content/guide/kom-igang-med-objektorienterad-programmering-i-python/210_arv.md
+++ b/content/guide/kom-igang-med-objektorienterad-programmering-i-python/210_arv.md
@@ -18,7 +18,7 @@ Skapa arv mellan klasser {#arv-mellan-klasser}
 
 Som exempel använder vi olika typer av video. Vi använder Video som bas/förälder klass och skapar subklassen Movie.
 
-Vi börjar med att skapa bas/förälder klassen Video:  
+Vi börjar med att skapa bas/förälder klassen Video. Alla typer av videor har en titel och en spellängd, vi skapar instansattribut för det:s
 
 ```python
 class Video():
@@ -28,7 +28,16 @@ class Video():
         self.length = length
 
     def print_info(self):
-        print("{title} is {length} minute(s) long".format(title=self.title, length=self.length)
+        print(
+            (
+                "{title} is {length} minute(s) long,"
+                "has the director {dir} and a rating of {rating}"
+            ).format(
+                title=self.title,
+                length=self.length,
+                dir=self.director,
+                rating=self.rating
+            ))
 ```
 
 Vi har en simple klass med två instansattribut och en instansmetod för att skriva ut instansattributen. Vi skapar subklassen Movie. Till skillnad från en Video har en Movie även en director och en rating.
