--- a/content/kurser/pattern-v1/.meta.md
+++ b/content/kurser/pattern-v1/.meta.md
@@ -8,7 +8,7 @@ views:
         region: breadcrumb
         template: default/breadcrumb
         data:
-            meta:
+            meta: 
                 type: breadcrumb
 
     article-toc:
@@ -17,6 +17,16 @@ views:
         sort: 0
         data:
             title: Innehållsförteckning
-            meta:
+            meta: 
                 type: article-toc
+
+    block-about:
+        region: sidebar-right
+        template: default/block
+        sort: 1
+        data:
+            meta: 
+                type: content
+                route: ./block-kmom
+
 ...
